fix: button position on iphone

--- a/projects/mtd/src/app/shared/entry-list/entry-list.component.scss
+++ b/projects/mtd/src/app/shared/entry-list/entry-list.component.scss
@@ -29,7 +29,7 @@
   &__floating {
     z-index: 99;
     position: absolute;
-    right: 4em;
+    right: 30px;
     background: white;
     padding: 2px;
   }
